# prelegal

./: .dockerignore  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  README.md  catalog.json  docker-compose.yml
.claude/: settings.local.json
backend/: README.md  pyproject.toml
backend/app/: auth.py  db.py  documents.py  main.py
backend/app/routes/: auth.py  chat.py  documents.py  saved_documents.py
backend/tests/: test_auth.py  test_chat.py  test_documents.py  test_health.py  test_saved_documents.py
frontend/: MANUAL_TESTS.md  package-lock.json  package.json  vitest.config.mts
frontend/app/: globals.css  layout.tsx  page.test.tsx  page.tsx
frontend/app/documents/: page.test.tsx  page.tsx
frontend/app/login/: page.test.tsx  page.tsx
frontend/components/: disclaimer-banner.tsx  doc-selector-chat.test.tsx  doc-selector-chat.tsx  document-disclaimer.tsx  generic-chat.test.tsx  generic-chat.tsx  generic-preview.test.tsx  generic-preview.tsx  nda-chat.test.tsx  nda-chat.tsx  nda-form.test.tsx  nda-form.tsx  nda-preview.test.tsx  nda-preview.tsx
frontend/lib/: api.ts  auth.test.ts  auth.ts  documents.ts  generic-chat.ts  nda-chat.test.ts  nda-chat.ts  nda-defaults.test.ts  nda-defaults.ts  nda-format.test.ts  nda-format.ts  nda-selectors.ts  nda-types.ts  pdf-collect-blocks.test.ts  pdf-layout.test.ts  pdf-layout.ts  pdf.ts  saved-documents.test.ts  saved-documents.ts  standard-terms-md.test.tsx  standard-terms-md.tsx
scripts/: start-linux.sh  start-mac.sh  start-windows.ps1  stop-linux.sh  stop-mac.sh  stop-windows.ps1
templates/: LICENSE.txt
