[project]
name = "prelegal-backend"
version = "0.1.0"
description = "Prelegal backend API and static frontend host"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=5.0.0",
    "email-validator>=2.3.0",
    "fastapi>=0.118.0",
    "litellm>=1.83.14",
    "pyjwt>=2.12.1",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.3.4",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
